# sequencer

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  README.md  config  groups  id_rsa.pub  jenkins_master_slave_id_rsa.pub  known_hosts  project.config  run_test.sh
apps/clock_ui/: backend.cpp  backend.hpp  clock_ui.pro  main.cpp  main.qml
apps/clock_ui/clock_ui/: backend.cpp
apps/digitakt/midi_sequencer/: backend.cpp  backend.hpp  dial_line_edit_sync.cpp  main.cpp  midi_sequencer.cpp  midi_sequencer.hpp  midi_sequencer.pro  midi_sequencer.ui  poti.cpp  poti.hpp  poti_backend_connector.cpp  poti_backend_connector.hpp  poti_group.cpp  poti_group.hpp  scale_dialog.cpp  scale_dialog.hpp  signal_blocker.hpp  track.cpp  track.hpp  util.cpp  util.hpp
apps/synth/: chain.cpp  chain.hpp  delay.cpp  delay.hpp  envelope.cpp  envelope.hpp  main.cpp  osc.cpp  osc.hpp  osc_freq.cpp  osc_freq.hpp  poti.cpp  poti.hpp  synth.cpp  synth.hpp  synth.pro  synth.ui
ci/docker/jenkins/: Dockerfile
ci/docker/jenkins-slave/: Dockerfile
ci/docker/linux/: Dockerfile
cmake/: SequencerConfig.cmake.in
device_spec/elektron/: analog_rytm_mkii.txt  digitakt.txt
examples/: CMakeLists.txt
examples/portaudio/: CMakeLists.txt  record_and_playback.cpp  reverb.cpp
examples/rtmidi/: CMakeLists.txt  midi_clock.cpp  send_midi_message.cpp  set_song_position_pointer.cpp  util.hpp
hooks/: pre-commit
include/sequencer/: CMakeLists.txt  Test.cpp  Test.h  assert.hpp  beat_duration.hpp  beat_tempo.hpp  beat_time_point.hpp  beats_per_minute.hpp  copyable_atomic.hpp  fixed_point_type.hpp  float_type.hpp  midi_clock.hpp  midi_sender.hpp  type_traits.hpp  vector.hpp  vector_view.hpp  wave_form.hpp
include/sequencer/audio/: delay.hpp  double_buffer.hpp  dry_wet.hpp  envelope.hpp  fft.hpp  note.hpp  oscillator.hpp  ring_buffer.hpp  sample.hpp  transfer_function.hpp  wave_reader.hpp
include/sequencer/backend/: clock.hpp  digitakt.hpp  digitakt_parameter.hpp  rtmidi.hpp  synth.hpp
include/sequencer/chrono/: chrono_adapter.hpp  sequencer_clock.hpp  units.hpp
include/sequencer/midi/: clock.hpp  clock_base.hpp  constants.hpp  device_spec.hpp  device_spec_reader.hpp  lfo.hpp  message.hpp  message_type.hpp  note.hpp  pattern.hpp  percussion_key.hpp  sender.hpp  step.hpp  step_sequencer.hpp  step_sequencer_base.hpp  track.hpp  track_parameter.hpp  trig_condition.hpp
include/sequencer/midi/message/: byte.hpp  channel_mode.hpp  channel_voice.hpp  control_change.hpp  invalid_string.hpp  message_type.hpp  realtime.hpp  system_common.hpp  system_exclusive.hpp  to_string.hpp  util.hpp
include/sequencer/portaudio/: portaudio.hpp
include/sequencer/rtmidi/: util.hpp
include/sequencer/util/: callable.hpp  thread_pool.hpp  thread_safe_queue.hpp  type_erased_storage.hpp
scripts/: install_dependencies_linux.sh  run-clang-format.py  run_clang_format.sh  run_clang_tidy.sh  run_tests.sh
scripts/ci/: add_build_comment.sh  add_clang_format_comments.sh  add_clang_tidy_comments.py  add_clang_tidy_comments.sh  add_comments.sh  create_build_comment.py  create_clang_format_comments.py  create_clang_tidy_comments.py  create_comments.py  custom_label_template.json  docker-compose.yml  filter_build_output.py  install_dependencies_linux.sh  message_only_template.json  send_success_message.sh
scripts/psv/: run_tests.sh
tests/: CMakeLists.txt  DummyTest.cpp  run.sh
tests/sequencer/: beat_duration_test.cpp  beat_time_point_test.cpp  beat_timepoint_test.cpp  fixed_point_type_test.cpp  float_type_test.cpp  midi_clock_test.cpp  midi_sender_test.cpp  rtmidi_sender_test.cpp  type_traits_test.cpp  vector_view_test.cpp  wave_form_test.cpp
tests/sequencer/audio/: delay_test.cpp  double_buffer_test.cpp  envelope_test.cpp  fft_test.cpp  oscillator_test.cpp  ring_buffer_test.cpp  sample_test.cpp  transfer_function_test.cpp
tests/sequencer/backend/: digitakt_lfo_test.cpp  digitakt_parameter_test.cpp  digitakt_test.cpp
tests/sequencer/chrono/: chrono_matchers.hpp  chrono_to_string.hpp  sequencer_clock_test.cpp  testing_clock.hpp  testing_clock_test.cpp
tests/sequencer/midi/: clock_base_test.cpp  clock_test.cpp  device_spec_test.cpp  lfo_test.cpp  message_type_test.cpp  midi_message_test.cpp  pattern_test.cpp  sender_test.cpp  step_sequencer_base_test.cpp  step_sequencer_test.cpp  step_test.cpp  track_test.cpp  util.hpp
tests/sequencer/midi/message/: channel_mode_test.cpp  channel_voice_test.cpp  control_change_test.cpp  message_type_test.cpp  realtime_test.cpp  system_common_test.cpp  system_exclusive_test.cpp  to_string_test.cpp  util_test.cpp
